# stablecam

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py  test_build_package.py  test_package_config.py
.github/workflows/: integration-tests.yml
.kiro/specs/stable-cam/: design.md  requirements.md  tasks.md
docs/: README.md  api.md  cli-guide.md  platform-guide.md
examples/: README.md  basic_usage.py  event_monitoring.py  integration_example.py  multi_camera_setup.py
scripts/: run_integration_tests.py
stablecam/: __init__.py  __main__.py  cli.py  events.py  logging_config.py  manager.py  models.py  platform_utils.py  registry.py  tui.py
stablecam/backends/: __init__.py  base.py  exceptions.py  linux.py  macos.py  windows.py
tests/: __init__.py  conftest.py  test_backends.py  test_cli.py  test_error_handling.py  test_events.py  test_integration.py  test_manager.py  test_models.py  test_package_installation.py  test_performance.py  test_registry.py  test_tui.py
